--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,8 +1,13 @@
-# MESSAGE( STATUS "CMAKE_BINARY_DIR:         " ${file(GLOB tds *.td)} )
-
 llvm_add_library(mutang 
   Laboratory.cpp
+  TestFinders/SimpleTestFinder.cpp
+  Context.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${MUTANG_MAIN_INCLUDE_DIR}
+  ${MUTANG_MAIN_INCLUDE_DIR}/TestFinders
+
+  LINK_LIBS
+  LLVMCore
+  LLVMSupport
 )
