--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -2,8 +2,10 @@ add_custom_target(MutangUnitTests)
 set_target_properties(MutangUnitTests PROPERTIES FOLDER "Tests")
 
 function(add_mutang_unittest test_dirname)
-        add_unittest(MutangUnitTests ${test_dirname} ${ARGN})
+  add_unittest(MutangUnitTests ${test_dirname} ${ARGN})
 endfunction()
 
 add_subdirectory(Laboratory)
+add_subdirectory(TestFinders)
+add_subdirectory(Context)
 
