--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -5,7 +5,8 @@ function(add_mutang_unittest test_dirname)
   add_unittest(MutangUnitTests ${test_dirname} ${ARGN})
 endfunction()
 
-add_subdirectory(Laboratory)
-add_subdirectory(TestFinders)
 add_subdirectory(Context)
+add_subdirectory(Laboratory)
+add_subdirectory(MutationOperators)
+add_subdirectory(TestFinders)
 
