Add initial TestRunner test

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,10 +4,12 @@ llvm_add_library(mutang
   MutationOperators/AddMutationOperator.cpp
   MutationEngine.cpp
   Context.cpp
+  TestRunners/SimpleTestRunner.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${MUTANG_MAIN_INCLUDE_DIR}
   ${MUTANG_MAIN_INCLUDE_DIR}/TestFinders
+  ${MUTANG_MAIN_INCLUDE_DIR}/TestRunners
   ${MUTANG_MAIN_INCLUDE_DIR}/MutationOperators
   ${MUTANG_MAIN_INCLUDE_DIR}/MutationEngine
   ${MUTANG_MAIN_INCLUDE_DIR}/Context
