--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -10,4 +10,5 @@ add_subdirectory(Laboratory)
 add_subdirectory(MutationEngine)
 add_subdirectory(MutationOperators)
 add_subdirectory(TestFinders)
+add_subdirectory(TestRunners)
 
