--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,16 +3,17 @@ llvm_add_library(mutang
   TestFinders/SimpleTestFinder.cpp
   MutationOperators/AddMutationOperator.cpp
   MutationEngine.cpp
+  MutationPoint.cpp
   Context.cpp
   TestRunners/SimpleTestRunner.cpp
 
   ADDITIONAL_HEADER_DIRS
-  ${MUTANG_MAIN_INCLUDE_DIR}
-  ${MUTANG_MAIN_INCLUDE_DIR}/TestFinders
-  ${MUTANG_MAIN_INCLUDE_DIR}/TestRunners
-  ${MUTANG_MAIN_INCLUDE_DIR}/MutationOperators
-  ${MUTANG_MAIN_INCLUDE_DIR}/MutationEngine
-  ${MUTANG_MAIN_INCLUDE_DIR}/Context
+  ${MUTANG_INCLUDE_DIR}
+  ${MUTANG_INCLUDE_DIR}/TestFinders
+  ${MUTANG_INCLUDE_DIR}/TestRunners
+  ${MUTANG_INCLUDE_DIR}/MutationOperators
+  ${MUTANG_INCLUDE_DIR}/MutationEngine
+  ${MUTANG_INCLUDE_DIR}/Context
 
   LINK_LIBS
   LLVMAsmPrinter
