Extend Driver and DriverTest a bit

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,6 +4,7 @@ llvm_add_library(mutang
   ConfigParser.cpp
   Context.cpp
   Driver.cpp
+  ModuleLoader.cpp
   MutationOperators/AddMutationOperator.cpp
   MutationEngine.cpp
   MutationPoint.cpp
