--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -18,8 +18,8 @@ if mutang_obj_root is not None:
         lit_config.fatal('No tools dir set!')
     path = os.path.pathsep.join((mutang_tools_dir, config.environment['PATH']))
     config.environment['PATH'] = path
+    print(mutang_tools_dir)
 
-config.mutang_lab = os.path.join(config.mutang_tools_dir, 'mutang-lab')
-
-config.substitutions.append( ('%mutang_lab', config.mutang_lab) )
+config.mutang_driver = os.path.join(config.mutang_tools_dir, 'mutang-driver')
+config.substitutions.append( ('%mutang_driver', config.mutang_driver) )
 
