--- a/tools/driver/CMakeLists.txt
+++ b/tools/driver/CMakeLists.txt
@@ -1,6 +1,10 @@
-add_llvm_executable(mutang-lab driver.cpp)
+add_llvm_executable(mutang-driver driver.cpp)
 
-target_link_libraries(mutang-lab
+target_link_libraries(mutang-driver
   mutang
+  LLVMCore
+  LLVMSupport
+  LLVMAsmParser
+  LLVMBitReader
   )
 
