Add abstract TestRunner

--- a/tools/driver/CMakeLists.txt
+++ b/tools/driver/CMakeLists.txt
@@ -6,5 +6,13 @@ target_link_libraries(mutang-driver
   LLVMSupport
   LLVMAsmParser
   LLVMBitReader
-  )
 
+  # FIXME: Should not be arch specific
+  # These are probably should be part of library
+  # not of the driver
+  LLVMX86AsmParser
+  LLVMX86AsmPrinter
+  LLVMX86CodeGen
+  LLVMX86Desc
+  LLVMX86Info
+)
