"fork" is made a configurable option
- "fork" option is enabled by default.
- NullProcessSandbox class is introduced to handle the debug case when no forks are made.
- More explicit naming for the methods of test/simple_test/math tests.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -37,6 +37,8 @@ llvm_add_library(mutang
   LLVMRuntimeDyld
   LLVMSupport
   LLVMTarget
+  LLVMTransformUtils
+
   # FIXME: Should not be arch specific
   LLVMX86AsmParser
   LLVMX86AsmPrinter
