--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -21,12 +21,15 @@ add_mutang_unittest(MutangUnitTests
 
   GoogleTest/GoogleTestFinderTest.cpp
 
+  SQLiteReporterTest.cpp
+
   TestModuleFactory.cpp
   TestModuleFactory.h
 )
 
 target_link_libraries(MutangUnitTests
   mutang
+  sqlite3
   LLVMAsmParser
   LLVMCore
   LLVMSupport
