TestFinder.findTestees: include test itself as 0-th element.
This is needed for convenience of finding the testee's call stack when reporting mutation results.

Also we are considering to enable 0-depth mutations (mutations of a test's own body). This change will make 0-depth mutations to work almost out of the box.

--- a/lab/simple_test/testee_path_calculation/Makefile
+++ b/lab/simple_test/testee_path_calculation/Makefile
@@ -1,13 +1,14 @@
+CLANG=/usr/local/opt/llvm/bin/clang
 
 default: main
 	./main
 
 %.o: %.c
-	clang -S -emit-llvm $*.c
-	clang -c $*.c
+	$(CLANG) -g -S -emit-llvm $*.c
+	$(CLANG) -g -c $*.c
 
 main: testee.o tester.o
-	clang -Wall -o main testee.o tester.o main.c
+	$(CLANG) -Wall -o main testee.o tester.o main.c
 
 clean:
 	rm -rf main
