"Mutang" target: project structure matches file structure.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -60,3 +60,17 @@ llvm_add_library(mutang
   LLVMX86Desc
   LLVMX86Info
 )
+
+# The following is needed to make CMake to generate a folder structure in Xcode
+# that corresponds to a physical folder structure.
+get_target_property(HERE_TARGET_SOURCES mutang SOURCES)
+foreach(source_file ${HERE_TARGET_SOURCES})
+  if (source_file MATCHES "(.*)\.h$")
+    file(RELATIVE_PATH relative_source_file ${MUTANG_INCLUDE_DIR} ${source_file})
+    get_filename_component(relative_path ${relative_source_file} DIRECTORY)
+    source_group("Header Files\\${relative_path}" FILES ${source_file})
+  else()
+    get_filename_component(relative_path ${source_file} DIRECTORY)
+    source_group("Source Files\\${relative_path}" FILES ${source_file})
+  endif()
+endforeach()
