Rename Mutang -> Mull in CMake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
-set(MUTANG_SOURCE_DIR   ${CMAKE_CURRENT_SOURCE_DIR})
-set(MUTANG_INCLUDE_DIR  ${MUTANG_SOURCE_DIR}/include)
-set(MUTANG_TOOLS_DIR    ${LLVM_TOOLS_BINARY_DIR})
-set(MUTANG_BINARY_DIR   ${LLVM_BINARY_DIR})
+set(MULL_SOURCE_DIR   ${CMAKE_CURRENT_SOURCE_DIR})
+set(MULL_INCLUDE_DIR  ${MULL_SOURCE_DIR}/include)
+set(MULL_TOOLS_DIR    ${LLVM_TOOLS_BINARY_DIR})
+set(MULL_BINARY_DIR   ${LLVM_BINARY_DIR})
 
-include_directories(${MUTANG_INCLUDE_DIR})
+include_directories(${MULL_INCLUDE_DIR})
 
 add_subdirectory(tools)
 add_subdirectory(lib)
