Rename: mutang -> mull in lit configs, Makefile, README.

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -1,7 +1,7 @@
 import subprocess
 import lit.formats
 
-config.name = "mutang"
+config.name = "mull"
 config.test_format = lit.formats.ShTest(False)
 
 config.suffixes = ['.test']
@@ -10,16 +10,16 @@ config.suffixes = ['.test']
 config.test_source_root = os.path.dirname(__file__)
 
 # test_exec_root: The root path where tests should be run.
-mutang_obj_root = getattr(config, 'mutang_obj_root', None)
-if mutang_obj_root is not None:
-    config.test_exec_root = os.path.join(mutang_obj_root, 'test')
-    mutang_tools_dir = getattr(config, 'mutang_tools_dir', None)
-    if not mutang_tools_dir:
+mull_obj_root = getattr(config, 'mull_obj_root', None)
+if mull_obj_root is not None:
+    config.test_exec_root = os.path.join(mull_obj_root, 'test')
+    mull_tools_dir = getattr(config, 'mull_tools_dir', None)
+    if not mull_tools_dir:
         lit_config.fatal('No tools dir set!')
-    path = os.path.pathsep.join((mutang_tools_dir, config.environment['PATH']))
+    path = os.path.pathsep.join((mull_tools_dir, config.environment['PATH']))
     config.environment['PATH'] = path
-    print(mutang_tools_dir)
+    print(mull_tools_dir)
 
-config.mutang_driver = os.path.join(config.mutang_tools_dir, 'mutang-driver')
-config.substitutions.append( ('%mutang_driver', config.mutang_driver) )
+config.mull_driver = os.path.join(config.mull_tools_dir, 'mull-driver')
+config.substitutions.append( ('%mull_driver', config.mull_driver) )
 
