Not going to fix duality MullTestSuite vs MullUnitTests.

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -1,3 +1,9 @@
+# The "add_mull_unittest" function uses the pattern for LLVM unit test targets
+# based on "add_unittest" LLVM helper. Example of its usage can be found in
+# ${LLVM_SOURCE_DIR}/unittests/CMakeLists.txt.
+# Since Mull's unit tests do not live inside LLVM tree's "unittests" folder,
+# we have to follow the pattern and create a custom unit test suite which is
+# "MullTestSuite" to be able to add actual "MullUnitTests" target to it.
 function(add_mull_unittest test_dirname)
   add_custom_target(MullTestSuite)
   set_target_properties(MullTestSuite PROPERTIES FOLDER "Tests")
