--- a/tools/driver/CMakeLists.txt
+++ b/tools/driver/CMakeLists.txt
@@ -1,21 +1,6 @@
-find_library(PTHREAD_LIBRARY_PATH sqlite3)
 
-add_llvm_executable(mull-driver driver.cpp
-)
+add_executable(mull-driver driver.cpp)
 
 target_link_libraries(mull-driver
   mull
-  LLVMCore
-  LLVMSupport
-  LLVMAsmParser
-  LLVMBitReader
-
-  # FIXME: Should not be arch specific
-  # These are probably should be part of library
-  # not of the driver
-  LLVMX86AsmParser
-  LLVMX86AsmPrinter
-  LLVMX86CodeGen
-  LLVMX86Desc
-  LLVMX86Info
 )
