RustTestRunner is configured to produce correct output.
Also update fixtures against stable rustc compiler:

```
rustc 1.14.0 (e8a012324 2016-12-16)
binary: rustc
commit-hash: e8a0123241f0d397d39cd18fcc4e5e7edde22730
commit-date: 2016-12-16
host: x86_64-apple-darwin
release: 1.14.0
LLVM version: 3.9
```

--- a/lab/rust/Makefile
+++ b/lab/rust/Makefile
@@ -5,7 +5,7 @@ default: compile run
 
 compile:
 	mkdir -p target/debug
-	rustc example.rs -Z print-link-args --verbose --crate-name example --crate-type lib -g --test --out-dir target/debug --emit=dep-info,link,llvm-ir,llvm-bc -L dependency=target/debug -L dependency=target/debug/deps
+	rustc example.rs -Z print-link-args --verbose --crate-name example --crate-type lib -g -C opt-level=0 --test --out-dir target/debug --emit=dep-info,link,llvm-ir,llvm-bc -L dependency=target/debug -L dependency=target/debug/deps
 
 run:
 	./target/debug/example
